[gd_scene load_steps=12 format=2]

[ext_resource path="res://actors/debug/tickbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/bylight/bylight.tres" type="DynamicFont" id=2]
[ext_resource path="res://gui/pause/options/options_menu.gd" type="Script" id=3]
[ext_resource path="res://gui/pause/options/locale_select.gd" type="Script" id=4]
[ext_resource path="res://gui/dialog/nx_box.tres" type="StyleBox" id=5]
[ext_resource path="res://gui/dialog/nx_wario_box.tres" type="StyleBox" id=6]
[ext_resource path="res://gui/dialog/nx_luigi_box.tres" type="StyleBox" id=7]
[ext_resource path="res://gui/hud/buttons/mobile_buttons.png" type="Texture" id=8]
[ext_resource path="res://gui/pause/options/reset_binds.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 8 )
region = Rect2( 20, 21, 20, 21 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 8 )
region = Rect2( 20, 42, 20, 21 )

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="List" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/separation = 4

[node name="CameraFix" parent="List" instance=ExtResource( 1 )]
margin_right = 624.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="List/CameraFix"]
margin_left = 23.0
margin_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Disable camera limiting [Try this if the camera is broken]"

[node name="TouchControls" parent="List" instance=ExtResource( 1 )]
margin_top = 24.0
margin_right = 624.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="List/TouchControls"]
margin_left = 23.0
margin_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Enable touch controls"

[node name="MuteMusic" parent="List" instance=ExtResource( 1 )]
margin_top = 48.0
margin_right = 624.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="List/MuteMusic"]
margin_left = 23.0
margin_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Mute music"

[node name="MuteSFX" parent="List" instance=ExtResource( 1 )]
margin_top = 72.0
margin_right = 624.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="List/MuteSFX"]
margin_left = 23.0
margin_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Mute SFX"

[node name="ShowTimer" parent="List" instance=ExtResource( 1 )]
margin_top = 96.0
margin_right = 624.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="List/ShowTimer"]
margin_left = 23.0
margin_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Show timer
"

[node name="LocaleSelect" type="OptionButton" parent="List"]
margin_top = 120.0
margin_right = 624.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 32 )
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
script = ExtResource( 4 )

[node name="ResetBinds" type="TextureButton" parent="List"]
margin_top = 156.0
margin_right = 624.0
margin_bottom = 177.0
rect_min_size = Vector2( 20, 21 )
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="List/ResetBinds"]
margin_left = 23.0
margin_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Reset controls to default"

[node name="Button" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -22.0

[connection signal="gui_input" from="." to="." method="_on_OptionsMenu_gui_input"]
[connection signal="item_selected" from="List/LocaleSelect" to="List/LocaleSelect" method="_on_Locale_item_selected"]
[connection signal="pressed" from="List/ResetBinds" to="List/ResetBinds" method="_on_ResetBinds_pressed"]
